test/Kubernetes.Tests/testassets/hostname-routing/clusters.json
[
  {
    "ClusterId": "frontend.foo:80",
    "LoadBalancingPolicy": null,
    "SessionAffinity": null,
    "HealthCheck": null,
    "HttpClient": null,
    "HttpRequest": null,
    "Destinations": {
      "http://10.244.2.38:80": {
        "Address": "http://10.244.2.38:80",
        "Health": null,
        "Metadata": null
      }
    },
    "Authentication": {},
    "Metadata": null
  }
]
