test/Kubernetes.Tests/testassets/hostname-routing/routes.json
[
  {
    "RouteId": "hostname-routing:/",
    "Match": {
      "Methods": null,
      "Hosts": [ "foo.bar.com" ],
      "Path": "/{**catch-all}",
      "Headers": null,
      "QueryParameters": null
    },
    "Order": null,
    "ClusterId": "frontend:80",
    "AuthorizationPolicy": null,
    "CorsPolicy": null,
    "Metadata": null,
    "Transforms": null
  }
]
